# huckleberry

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: python-app.yml
huckleberry/: __init__.py  constants.py  db.py  game.py  query.py  schema.sql  schema_postgresql.sql
huckleberry/static/: style.css
huckleberry/templates/: computer_gives_clues_human_guesses.html  layout.html  play_with_computer.html  welcome.html
